<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textMultiLine"
        android:layout_marginStart="14dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentTop="true"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/notify_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-light"
            android:padding="16dp"
            android:layout_marginStart="24dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/notify_me_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-light"
            android:padding="16dp"
            android:layout_marginStart="24dp"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/quan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
        android:background="@android:color/darker_gray"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/addition"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:onClick="plus"
            android:layout_marginLeft="20dp"
       />

        <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

           <Button
        android:id="@+id/minus"
        android:background="@android:color/darker_gray"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/minus"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:onClick="minus"
        />



          </LinearLayout >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="15dp"
        android:padding="10dp"
        android:textAllCaps="true"

       />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="26dp"
        android:padding="10dp"

        />

    <Button
        android:id="@+id/textView3"
        android:background="@android:color/darker_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:onClick="message"/>
    </LinearLayout>
</ScrollView>